Сделлал внешний вид фильтров машин и реализовал фильтрацию по трансмиссии

--- a/CarsCrete/ClientApp/src/index.html
+++ b/CarsCrete/ClientApp/src/index.html
@@ -9,6 +9,17 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root>
+    <div style="display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;">
+      <img src="./assets/images/load.gif" alt="">
+    </div>
+  </app-root>
 </body>
 </html>
