--- a/CarsCrete/ClientApp/src/index.html
+++ b/CarsCrete/ClientApp/src/index.html
@@ -18,7 +18,7 @@
     left: 0;
     width: 100%;
     height: 100%;">
-      <img src="./assets/images/load.gif" alt="">
+      <img style="width: 40px; height: 40px;" src="./assets/images/load.gif" alt="">
     </div>
   </app-root>
 </body>
